use ubi8 baseimage and add new lib for pom.xml