@@ -1,20 +1,13 @@
-FROM java:17
+FROM registry.access.redhat.com/ubi8/openjdk-17-runtime:1.21
 
-LABEL base-image="java:17" \
-      purpose="Spring Boot and Embeddable Clustered Infinispan"
+LABEL BASE_IMAGE="registry.access.redhat.com/ubi9/openjdk-17-runtime:1.21"
+LABEL JAVA_VERSION="17"
+LABEL PURPOSE="Spring Boot and Embeddable Clustered Infinispan"		
 
-MAINTAINER Muhammad Edwin < edwin at redhat dot com >
+LABEL MAINTAINER="Muhammad Edwin < edwin at redhat dot com >"
 
-# set working directory at /deployments
-WORKDIR /deployments
+ENV JAVA_OPTS_APPEND="-XX:TieredStopAtLevel=1 -noverify -Xlog:gc*,safepoint=debug:file=/tmp/gc.log.%p:time,uptime:filecount=5,filesize=50M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp/"
+ENV GC_CONTAINER_OPTIONS="-XX:+UseShenandoahGC"
+ENV TZ="Asia/Jakarta"
 
-# copy my jar file
-COPY target/*.jar app.jar
-
-# gives uid
-USER 185
-
-EXPOSE 8080
-
-# run it
-CMD ["java", "-jar","app.jar"]
+COPY target/*.jar /deployments/application.jar
